deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: spring-boot-kubernate-demo:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
