ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  labels:
    app: spring-app
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080        # Port inside the cluster
      targetPort: 8080  # Port your Spring Boot app listens on
