app-deployment-with-db-new.yml
# Spring Boot Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-crud-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-k8s-mysql
  template:
    metadata:
      labels:
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-crud-k8s
          image: spring-boot-with-db:1.0  # Ensure this image is pushed to a registry or present locally in Minikube/cluster
          ports:
            - containerPort: 8080
---
# Spring Boot Service
apiVersion: v1
kind: Service
metadata:
  name: springboot-crud-svc
spec:
  selector:
    app: springboot-k8s-mysql
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
