service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-k8s-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
