Ingress-alb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: company.example.com
      http:
        paths:
          - path: /employee
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 8080
          - path: /department
            pathType: Prefix
            backend:
              service:
                name: department-service
                port:
                  number: 8080
